--- a/kustomize/overlays/microshift/resources/keycloak/keycloakauthorizations/nerc/keycloakauthorization.yaml
+++ b/kustomize/overlays/microshift/resources/keycloak/keycloakauthorizations/nerc/keycloakauthorization.yaml
@@ -18,6 +18,57 @@ spec:
   realm:
     id: NERC
     clients:
+      - id: nerc
+        authorizationSettings:
+          resources:
+            - name: cluster
+              displayName: cluster
+              scopes:
+
+                - id: cluster-all
+                  name: all clusters
+                  displayName: all clusters
+                - id: cluster-nerc-ocp-infra
+                  name: nerc-ocp-infra
+                  displayName: nerc-ocp-infra cluster
+                - id: cluster-nerc-ocp-obs
+                  name: nerc-ocp-obs
+                  displayName: nerc-ocp-obs cluster
+                - id: cluster-nerc-ocp-prod
+                  name: nerc-ocp-prod
+                  displayName: nerc-ocp-prod cluster
+                - id: cluster-nerc-ocp-test
+                  name: nerc-ocp-test
+                  displayName: nerc-ocp-test cluster
+
+            - name: namespace
+              displayName: namespace
+              scopes:
+                - id: namespace-all
+                  name: all namespaces
+                  displayName: all namespaces
+                - id: namespace-rhods-notebooks
+                  name: rhods-notebooks
+                  displayName: rhods-notebooks namespace
+
+          policies:
+            - id: group-nerc-ops
+              name: group-nerc-ops
+              logic: POSITIVE
+              decisionStrategy: UNANIMOUS
+              type:
+                group:
+                  groups:
+                    - id: nerc-ops
+
+          permissions:
+            - name: group-nerc-ops-cluster-all
+              policy: group-nerc-ops
+              resource: cluster
+            - name: group-nerc-ops-namespace-all
+              policy: group-nerc-ops
+              resource: namespace
+
       - id: ai4cloudops
         authorizationSettings:
           resources:
@@ -68,39 +119,19 @@ spec:
                 group:
                   groups:
                     - id: nerc-ai4cloudops
-            - id: group-nerc-ops
-              name: group-nerc-ops
-              logic: POSITIVE
-              decisionStrategy: UNANIMOUS
-              type:
-                group:
-                  groups:
-                    - id: nerc-ops
 
           permissions:
-            - name: group-nerc-ops-cluster-all
-              client: ai4cloudops
-              policy: group-nerc-ops
-              resource: cluster
-            - name: group-nerc-ops-namespace-all
-              client: ai4cloudops
-              policy: group-nerc-ops
-              resource: namespace
             - name: group-nerc-ai4cloudops-namespace-all
-              client: ai4cloudops
               policy: group-nerc-ai4cloudops
               resource: namespace
             - name: client-ai4cloudops-namespace-all
-              client: ai4cloudops
               policy: client-ai4cloudops
               resource: namespace
             - name: group-nerc-ai4cloudops-cluster-nerc-ocp-prod
-              client: ai4cloudops
               policy: group-nerc-ai4cloudops
               resource: cluster
               scope: nerc-ocp-prod
             - name: client-ai4cloudops-cluster-nerc-ocp-prod
-              client: ai4cloudops
               policy: client-ai4cloudops
               resource: cluster
               scope: nerc-ocp-prod
