Ignore unused functions in test files
There are a number of unused functions in queriestest/parse_test.go, all of
which trigger linting errors. Rather than removing the unused functions, I
have disabled the `unused` linter for that file.

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -19,6 +19,9 @@ linters:
       - path: '(.+)_test\.go'
         linters:
         - errcheck
+      - path: 'queriestest/parse_test.go'
+        linters:
+        - unused
   settings:
     misspell:
       locale: US
